// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Spartacus Storefinder schematics: ng-add Storefinder feature eager loading should import appropriate modules 1`] = `
"import { NgModule } from '@angular/core';
import { I18nConfig, provideConfig } from "@spartacus/core";
import { StoreFinderModule } from "@spartacus/storefinder";
import { storeFinderTranslationChunksConfig, storeFinderTranslationsEn } from "@spartacus/storefinder/assets";
import { StoreFinderRootModule } from "@spartacus/storefinder/root";

@NgModule({
  declarations: [],
  imports: [
    StoreFinderRootModule,
    StoreFinderModule
  ],
  providers: [provideConfig(<I18nConfig>{
    i18n: {
      resources: { en: storeFinderTranslationsEn },
      chunks: storeFinderTranslationChunksConfig,
    },
  })]
})
export class StoreFinderFeatureModule { }
"
`;

exports[`Spartacus Storefinder schematics: ng-add Storefinder feature general setup should add the feature using the lazy loading syntax 1`] = `
"import { NgModule } from '@angular/core';
import { CmsConfig, I18nConfig, provideConfig } from "@spartacus/core";
import { storeFinderTranslationChunksConfig, storeFinderTranslationsEn } from "@spartacus/storefinder/assets";
import { STORE_FINDER_FEATURE, StoreFinderRootModule } from "@spartacus/storefinder/root";

@NgModule({
  declarations: [],
  imports: [
    StoreFinderRootModule
  ],
  providers: [provideConfig(<CmsConfig>{
    featureModules: {
      [STORE_FINDER_FEATURE]: {
        module: () =>
          import('@spartacus/storefinder').then((m) => m.StoreFinderModule),
      },
    }
  }),
  provideConfig(<I18nConfig>{
    i18n: {
      resources: { en: storeFinderTranslationsEn },
      chunks: storeFinderTranslationChunksConfig,
    },
  })
  ]
})
export class StoreFinderFeatureModule { }
"
`;

exports[`Spartacus Storefinder schematics: ng-add Storefinder feature general setup styling should create a proper scss file 1`] = `
"@import "../../styles-config";
@import "@spartacus/storefinder";
@import "@spartacus/styles/vendor/bootstrap/scss/functions";
@import "@spartacus/styles/vendor/bootstrap/scss/variables";
@import "@spartacus/styles/vendor/bootstrap/scss/_mixins";
"
`;

exports[`Spartacus Storefinder schematics: ng-add Storefinder feature general setup styling should update angular.json 1`] = `
"{
  "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
  "version": 1,
  "newProjectRoot": "",
  "projects": {
    "schematics-test": {
      "projectType": "application",
      "schematics": {
        "@schematics/angular:component": {
          "style": "scss",
          "standalone": false,
          "type": "component",
          "addTypeToClassName": false
        },
        "@schematics/angular:directive": {
          "standalone": false,
          "type": "directive",
          "addTypeToClassName": false
        },
        "@schematics/angular:pipe": {
          "standalone": false,
          "typeSeparator": "."
        },
        "@schematics/angular:service": {
          "type": "service",
          "addTypeToClassName": false
        },
        "@schematics/angular:guard": {
          "typeSeparator": "."
        },
        "@schematics/angular:interceptor": {
          "typeSeparator": "."
        },
        "@schematics/angular:module": {
          "typeSeparator": "."
        },
        "@schematics/angular:resolver": {
          "typeSeparator": "."
        }
      },
      "root": "",
      "sourceRoot": "src",
      "prefix": "app",
      "architect": {
        "build": {
          "builder": "@angular/build:application",
          "options": {
            "browser": "src/main.ts",
            "polyfills": [
              "zone.js"
            ],
            "tsConfig": "tsconfig.app.json",
            "inlineStyleLanguage": "scss",
            "assets": [
              {
                "glob": "**/*",
                "input": "public"
              }
            ],
            "styles": [
              "src/styles.scss",
              "src/styles/spartacus/storefinder.scss"
            ],
            "stylePreprocessorOptions": {
              "includePaths": [
                "node_modules/"
              ],
              "sass": {
                "silenceDeprecations": [
                  "import"
                ]
              }
            }
          },
          "configurations": {
            "production": {
              "budgets": [
                {
                  "type": "initial",
                  "maximumWarning": "500kB",
                  "maximumError": "3.5mb"
                },
                {
                  "type": "anyComponentStyle",
                  "maximumWarning": "4kB",
                  "maximumError": "8kB"
                }
              ],
              "outputHashing": "all"
            },
            "development": {
              "optimization": false,
              "extractLicenses": false,
              "sourceMap": true
            }
          },
          "defaultConfiguration": "production"
        },
        "serve": {
          "builder": "@angular/build:dev-server",
          "configurations": {
            "production": {
              "buildTarget": "schematics-test:build:production"
            },
            "development": {
              "buildTarget": "schematics-test:build:development"
            }
          },
          "defaultConfiguration": "development"
        },
        "test": {
          "builder": "@angular/build:unit-test",
          "options": {
            "stylePreprocessorOptions": {
              "includePaths": [
                "node_modules/"
              ]
            },
            "styles": [
              "src/styles/spartacus/storefinder.scss"
            ]
          }
        }
      }
    }
  }
}"
`;
